// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Welcome /> should render 1`] = `
<Container>
  <Box>
    <h3>
      Virtool 
      <small
        className="text-muted"
      >
        <Component />
      </small>
    </h3>
    <p>
      Viral infection diagnostics using next-generation sequencing
    </p>
    <a
      className="btn btn-default"
      href="http://www.virtool.ca/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="globe"
        pullRight={false}
      />
       Website
    </a>
  </Box>
</Container>
`;

exports[`<Welcome /> should render when [version=false] 1`] = `
<Container>
  <Box>
    <h3>
      Virtool 
    </h3>
    <p>
      Viral infection diagnostics using next-generation sequencing
    </p>
    <a
      className="btn btn-default"
      href="http://www.virtool.ca/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="globe"
        pullRight={false}
      />
       Website
    </a>
  </Box>
</Container>
`;
